tests/float/double_dot_start_with_point.rz
.56.2 // error: numbers can't have two decimal parts